# SDL3_Rust_Game_Training

./: README.md
01_C_Lang_SDL3/: README.md
01_C_Lang_SDL3/01_tutorial_C_SDL3_macOS/: README.md
01_C_Lang_SDL3/02_TSoding_SDL3_macOS/: README.md
01_C_Lang_SDL3/03_TSoding_SDL3_LinuxOS/: README.md
01_C_Lang_SDL3/a01_snake/: README.md
01_C_Lang_SDL3/a02_clear_screen/src/: main.c
01_C_Lang_SDL3/a03_geometry/: README.md
01_C_Lang_SDL3/a03_geometry/src/: main.c
02_Rust_Lang_SDL3/: README.md
02_Rust_Lang_SDL3/001_demo_game/: README.md
02_Rust_Lang_SDL3/002_renderer/: README.md
02_Rust_Lang_SDL3/a01_game-of-life/: Cargo.toml
02_Rust_Lang_SDL3/animation/: Cargo.toml
02_Rust_Lang_SDL3/getting_started_sdl3/: Cargo.toml
02_Rust_Lang_SDL3/raw-windows-handle-with-wgpu/: Cargo.toml  README.md
02_Rust_Lang_SDL3/raw-windows-handle-with-wgpu/src/: main.rs
02_Rust_Lang_SDL3/sdl3-audio-demo/: Cargo.toml
02_Rust_Lang_SDL3/sdl3-rs-demo/: Cargo.toml  README.md
02_Rust_Lang_SDL3/spinning_cube/: Cargo.toml  README.md
03_Cpp_Lang_SDL2/: README.md
03_Cpp_Lang_SDL2/a01_test_sdl2/: justfile
03_Cpp_Lang_SDL2/a03_EventQueue/: justfile
03_Cpp_Lang_SDL3/: README.md
03_Cpp_Lang_SDL3/Codo_Meson_Compile/: meson.build
03_Cpp_Lang_SDL3/Codo_Meson_Compile/subprojects/: assimp.wrap
03_Cpp_Lang_SDL3/CodotakuGameEngine_Cpp_23/: CMakeLists.txt  README.md
04_C_Lang_SDL2/: README.md
04_C_Lang_SDL2/01_tutorials_roguelike/: README.md
04_C_Lang_SDL2/a01_getting_an_image_on_the_screen/: justfile
05_Cpp_Lang_SDL2/: README.md
05_Cpp_Lang_SDL2/MikeShah_SDL2_Tutorials/: README.md
05_Cpp_Lang_SDL2/MikeShah_SDL2_Tutorials_training01/: README.md  error.txt
05_Cpp_Lang_SDL2/My_smallProject_game/: README.md
05_Cpp_Lang_SDL2/basic_SDL2/: README.md
06_Rust_Lang_SDL2/: README.md
06_Rust_Lang_SDL2/02_sdl2_rust_tetris/: README.md
06_Rust_Lang_SDL2/MikeShah_SDL2_Tutorials_convert_rust_code/: README.md
06_Rust_Lang_SDL2/cursor_sdl2/: Cargo.toml  README.md
06_Rust_Lang_SDL2/game_loop_another_ver/: Cargo.toml
06_Rust_Lang_SDL2/gfx_demo/: Cargo.toml
06_Rust_Lang_SDL2/midpoint_circle_visualization/: README.md
06_Rust_Lang_SDL2/raw-windows-handle-with-wgpu/: Cargo.toml
06_Rust_Lang_SDL2/renderer-texture/: Cargo.toml
06_Rust_Lang_SDL2/sdl2-rs-demo/: Cargo.toml  README.md
06_Rust_Lang_SDL2/sdl2-rs-demo/sdl2-sys/: Cargo.toml
06_Rust_Lang_SDL2/sdl2_audio_demo/: Cargo.toml  README.md
06_Rust_Lang_SDL2/sdl2_mixer_demo/: Cargo.toml  README.md
06_Rust_Lang_SDL2/sdl2_resouce_manager/: Cargo.toml  README.md
06_Rust_Lang_SDL2/sdl2_ttf_demo/: Cargo.toml  README.md
06_sdl3_sys_rs/: README.md
08_HLSL_Shader_Fundamentals/: README.md
08_HLSL_Shader_Fundamentals/999_small_project/: README.md  a03_test110.frag
98_Odin_SDL3/: README.md
99_rust로doom만들기/: README.md
99_rust로doom만들기SDL2/: README.md
99_rust로doom만들기SDL2_etc/: README.md
99_rust로doom만들기SDL2_etc/001_cpp_OpenCV_tutorial/: README.md
99_rust로doom만들기SDL2_etc/002_cpp_OpenGV_Game_Car_Simulator/: README.md
99_rust로doom만들기SDL2_etc/01_Doom_start/: README.md
99_rust로doom만들기SDL2_etc/04_raylib_game/: README.md
(+192 files in other folders)
