[package]
name = "raw-windows-handle-with-wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
pollster = "0.4.0"
sdl3 = { version = "0", features = [] }
wgpu = { version = "23.0.1", features = ["spirv"] }

[dependencies.sdl3-sys]
version = "0.1.3+SDL3-preview-3.1.6"

[dependencies.raw-window-handle]
version = "0.6.2"
optional = true
