[package]
name = "sdl2-rs-demo"
version = "0.1.0"
edition = "2021"
# links = "sdl2-sys"

[workspace]
members = ["sdl2-sys"]
resolver = "2"

[dependencies]
sdl2 = "0.37.0"
bitflags = "1.2.1"
libc = "0.2.92"
lazy_static = "1.4.0"
sdl2-sys = {path = "sdl2-sys"}

# [dependencies.sdl2-sys]
# path = "sdl2-sys"
# version = "^0.37.0"

[dependencies.c_vec]
# allow both 1.* and 2.0 versions
version = ">= 1.0"
optional = true

[dev-dependencies]
rand = "0.7"
wgpu = { version = "0.20", features = ["spirv"] }
pollster = "0.2.4"
env_logger = "0.11.0"

[dependencies.raw-window-handle]
version = "0.6.0"
optional = true

[features]
unsafe_textures = []
default = []
gfx = ["c_vec", "sdl2-sys/gfx"]
mixer = ["sdl2-sys/mixer"]
image = ["sdl2-sys/image"]
ttf = ["sdl2-sys/ttf"]
# Use hidapi support in SDL. Only 2.0.12 and after
hidapi = []

use-bindgen = ["sdl2-sys/use-bindgen"]
use-pkgconfig = ["sdl2-sys/use-pkgconfig"]
use-vcpkg = ["sdl2-sys/use-vcpkg"]
use_mac_framework = ["sdl2-sys/use_mac_framework"]
use_ios_framework = ["sdl2-sys/use_ios_framework"]
bundled = ["sdl2-sys/bundled"]
static-link = ["sdl2-sys/static-link"]

[package.metadata.docs.rs]
features = ["default", "gfx", "mixer", "image", "ttf"]
